Changed the PrimaryKeyDef property to return null if it is null (it was returning the super class' PrimaryKeyDef).  Changed the construction behaviour to use the super class' PrimaryKeyDef if its one is null. Moved some tests around. Corrected some spelling mistakes.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -153,6 +153,7 @@
     <Compile Include="TestBOPropInteger.cs" />
     <Compile Include="TestBORelationshipMapper.cs" />
     <Compile Include="TestBOSerialisation.cs" />
+    <Compile Include="TestBusinessObjectInheritance.cs" />
     <Compile Include="TestBusinessObjectRules.cs" />
     <Compile Include="TestBusinessObjectSerialisationXML.cs" />
     <Compile Include="TestBOStatus.cs" />
