--- a/source/Habanero.Db/Habanero.Db.csproj
+++ b/source/Habanero.Db/Habanero.Db.csproj
@@ -211,9 +211,6 @@
     <Compile Include="DatabaseSettings.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="DatabaseUtil.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="DatabaseWriteException.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -223,6 +220,7 @@
     </Compile>
     <Compile Include="SelectQueryDB.cs" />
     <Compile Include="SourceDB.cs" />
+    <Compile Include="SqlFormatterForAccess.cs" />
     <Compile Include="SqlFormattingHelper.cs" />
     <Compile Include="SqlStatement.cs">
       <SubType>Code</SubType>
