--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -2,7 +2,7 @@
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1484CDE2-0A30-466F-9FEA-E79CE2751489}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -228,9 +228,6 @@
     <Compile Include="DatabaseConnection\TestDatabaseConnectionFactory.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="TestDatabaseUtil.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="TestDeleteStatementGenerator.cs" />
     <Compile Include="TestGeneral.cs" />
     <Compile Include="TestCompositeKeyBO.cs" />
@@ -252,6 +249,7 @@
     <Compile Include="TestSingleRelationship_Association_DB.cs" />
     <Compile Include="TestSingleRelationship_Composition_DB.cs" />
     <Compile Include="TestSourceDB.cs" />
+    <Compile Include="TestSqlFormatterForAccess.cs" />
     <Compile Include="TestSQLStatement.cs">
       <SubType>Code</SubType>
     </Compile>
