--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -257,6 +257,7 @@
     <Compile Include="TestSQLStatementList.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TestTransactionalBusinessObjectDB.cs" />
     <Compile Include="TestTransactionCommitterDB.cs" />
     <Compile Include="TestTransactionLoggerDB.cs" />
     <Compile Include="TestUpdateStatementGenerator.cs" />
