--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -95,6 +95,9 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="ButtonSizePolicyWin.cs" />
+    <Compile Include="CloseBOEditorDialogWin.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CollapsiblePanelGroupControlWin.cs">
       <SubType>Component</SubType>
     </Compile>
