Updated the SQLite library to the latest (1.0.65).  Created a sample database to test the connection and transaction creation with it. Changed the IsolationLevel of the SQLite connection to Serializable. Created a BeginTransaction method on IDatabaseConnection so which can be implemented by subclasses to perform special logic when creating an IDbTransaction object. Changed the loading logic to call AfterLoad only once the IDataReader has been disposed of. This should decrease the number of IDataReader objects (and hence connections) that get created by Habanero. Fixed a problem with the connect string for FirebirdEmbedded

--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -289,6 +289,11 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="sqlite-testdb.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
