Added the DataAccessorRemote class which is a very simple wrapper for a remote IDataAccessor.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -180,6 +180,7 @@
     <Compile Include="CriteriaManager\PropDefParameterSQLInfo.cs" />
     <Compile Include="DataAccessorInMemory.cs" />
     <Compile Include="DataAccessorMultiSource.cs" />
+    <Compile Include="DataAccessorRemote.cs" />
     <Compile Include="DataStoreInMemory.cs" />
     <Compile Include="DataStoreInMemoryBinaryReader.cs" />
     <Compile Include="DataStoreInMemoryBinaryWriter.cs" />
