Removed Redundant methods in MessageWizardStep and NullWizardStep. Created Tests for WizardStep, MessageWizardStep, NullWizardStep.\ Created WizardStepVWG.
Finished all refactoring of all Code for Implementing MoveOn and UndoMoveOn for a WizardStep and the WizardController.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -267,8 +267,11 @@
     <Compile Include="Mappers\TestListComboBoxMapper.cs" />
     <Compile Include="TestStaticDataEditor.cs" />
     <Compile Include="TestValidationRule.cs" />
+    <Compile Include="Wizard\TestMessageWizardStep.cs" />
+    <Compile Include="Wizard\TestNullWizardStep.cs" />
     <Compile Include="Wizard\TestWizardControl.cs" />
     <Compile Include="Wizard\TestWizardController.cs" />
+    <Compile Include="Wizard\TestWizardStepWin.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="key.snk" />
