--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -85,9 +85,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=5.1.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+    <Reference Include="MySql.Data, Version=6.2.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\MySql.Data.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="nmock, Version=1.0.2735.26971, Culture=neutral, PublicKeyToken=824173e82b3e3b0d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -268,8 +269,11 @@
     <Compile Include="Mappers\TestListComboBoxMapper.cs" />
     <Compile Include="TestStaticDataEditor.cs" />
     <Compile Include="TestValidationRule.cs" />
+    <Compile Include="Wizard\TestMessageWizardStep.cs" />
+    <Compile Include="Wizard\TestNullWizardStep.cs" />
     <Compile Include="Wizard\TestWizardControl.cs" />
     <Compile Include="Wizard\TestWizardController.cs" />
+    <Compile Include="Wizard\TestWizardStepWin.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="key.snk" />
