Changed XmlClassDefsLoader to use RecordingExceptionNotifier.cs so that we can build a collection of errors if importing ClassDefs into Firestarter fails.

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -148,6 +148,7 @@
     <Compile Include="DateTimeTodayConverter.cs" />
     <Compile Include="DelegatedExceptionNotifier.cs" />
     <Compile Include="Exceptions\InvalidDefinitionException.cs" />
+    <Compile Include="Exceptions\RecordedExceptionsException.cs" />
     <Compile Include="IBusinessObjectLookupList.cs" />
     <Compile Include="IDatabaseLookupList.cs" />
     <Compile Include="ILookupListWithClassDef.cs" />
