--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{12A701DA-DAF5-4709-942E-17F1EFA381D8}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -258,7 +258,8 @@
     <Compile Include="Wizard\TestMessageWizardStep.cs" />
     <Compile Include="Wizard\TestNullWizardStep.cs" />
     <Compile Include="Wizard\TestWizardControl.cs" />
-    <Compile Include="Wizard\TestWizardController.cs" />
+    <Compile Include="Wizard\TestWizardController.cs">
+    </Compile>
     <Compile Include="Wizard\TestWizardStep.cs" />
   </ItemGroup>
   <ItemGroup>
