Fixed one failing test in WizardController. Added Support for DeleteConfirmation Delegate to ReadOnlyGridControlWin.

--- a/source/Habanero.Test.UI.VWG/Habanero.Test.UI.VWG.csproj
+++ b/source/Habanero.Test.UI.VWG/Habanero.Test.UI.VWG.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Grid\TestReadOnlyGridControlVWG.cs" />
     <Compile Include="Grid\TestReadOnlyGridVWG.cs" />
     <Compile Include="HabaneroControls\BusinessObjectControlStubVWG.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="HabaneroControls\FilterControl\TestEnumComboBoxFilterVWG.cs" />
     <Compile Include="HabaneroControls\FilterControl\TestFilterControlBuilderVWG.cs" />
