Added Method to IBusinessObjectRule IsValid(IBusinessObject) and made the previous method IsValid() obsolete.
Added a new Standard BusinessObjectRule InterPropRule this can be used when setting a rule such as DisposalDate GreaterThan AcquisitionDate.
The Testability framework will use rules built using InterPropRule to generate valid Values. 

Added Functionality to ReflectionUtilities to be able to get the Property name from a Lamda such as bo => bo.PropertyName.
Removed ShowUpDown from DateTimePickerVWG VWG now implements this functionality.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -369,6 +369,7 @@
     <Compile Include="RelProp.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Rules\InterPropRule.cs" />
     <Compile Include="SelectQuery.cs" />
     <Compile Include="SimpleLookupList.cs" />
     <Compile Include="SingleRelationship.cs">
