--- a/source/Habanero.Test.Structure/Habanero.Test.Structure.csproj
+++ b/source/Habanero.Test.Structure/Habanero.Test.Structure.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{D59DAD41-663F-4AD7-9B22-04C2A7D7F9C2}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -100,6 +100,7 @@
     <Compile Include="Entity.Def.cs">
       <DependentUpon>Entity.cs</DependentUpon>
     </Compile>
+    <Compile Include="FakeClasses.cs" />
     <Compile Include="LegalEntity.cs" />
     <Compile Include="LegalEntity.Def.cs">
       <DependentUpon>LegalEntity.cs</DependentUpon>
