Created IPropRuleComparable which is a interface for Rule that implement MaxValue and MinValue. This is used by the Habanero.Testability to generate valid data.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -195,6 +195,7 @@
     <Compile Include="IDataAccessor.cs" />
     <Compile Include="IDataSetProvider.cs" />
     <Compile Include="ClassDefinition\IDefClassFactory.cs" />
+    <Compile Include="IPropRuleComparable.cs" />
     <Compile Include="Loaders\ClassDefsXmlValidator.cs" />
     <Compile Include="Loaders\XmlFilterLoader.cs" />
     <Compile Include="Loaders\XmlTriggerLoader.cs" />
