--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{04E4FF45-6C20-46EB-A9AD-2B04895F6218}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -249,6 +249,9 @@
     </Compile>
     <Compile Include="RadioButtonVWG.cs">
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="SearchBoxControlVWG.cs">
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="SplitContainerVWG.cs">
       <SubType>Component</SubType>
