Worked on #680 (XmlPropertyRuleLoader should handle parameters with empty values) Separated out some tests that only apply to loading from xml into classdefs, not into other implementers of IPropRule, all to do with how to handle blank values.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -2,7 +2,7 @@
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{D624008C-47BA-44CC-9CC8-DCEC9F0005B3}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -168,6 +168,7 @@
     <Compile Include="Loaders\TestXmlBusinessObjectLookupListLoader.cs" />
     <Compile Include="Loaders\TestXmlDatabaseLookupListLoader.cs" />
     <Compile Include="Loaders\TestXmlFilterLoader.cs" />
+    <Compile Include="Loaders\TestXmlPropertyRuleLoader_ClassDefOnly.cs" />
     <Compile Include="Loaders\TestXmlSimpleLookupListLoader.cs" />
     <Compile Include="PropRule\TestInterPropRule.cs" />
     <Compile Include="PropRule\TestInterPropRuleGeneric.cs" />
