Implemented #698 (Create BusinessObjectManagerNull - a non-caching, stateless BO Manager)

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -186,6 +186,7 @@
     <Compile Include="TestBORelationshipMapper.cs" />
     <Compile Include="TestBOSerialisation.cs" />
     <Compile Include="TestBusinessObjectInheritance.cs" />
+    <Compile Include="TestBusinessObjectManagerNull.cs" />
     <Compile Include="TestBusinessObjectRules.cs" />
     <Compile Include="TestBusinessObjectSerialisationXML.cs" />
     <Compile Include="TestBOStatus.cs" />
