Worked on #708 (Move DateRange code into Habanero Core) Started Developing DateRange.cs and DateRangeOptions.cs and DateRangeOptionsConverter.cs in Habanero.Base so that we can move the Functionality from DateRangeFilterCombo Box in Habanero.Faces to the base project so that we can use it for other functionality such as setting Defaults and Rules in Habanero.

--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -103,6 +103,8 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="ArchitectureTest.cs" />
+    <Compile Include="Base\TestDateRange.cs" />
+    <Compile Include="Base\TestDateTimeOptionsConverter.cs" />
     <Compile Include="Base\TestDateTimeNow.cs" />
     <Compile Include="Base\TestDateTimeNowConverter.cs" />
     <Compile Include="Base\TestDateTimeToday.cs" />
