--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -2,7 +2,7 @@
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{D04BB138-C144-4406-9A41-17192E7D44BF}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -342,6 +342,9 @@
     <Compile Include="Util\ByteString.cs" />
     <Compile Include="Util\ConfigFileSettings.cs" />
     <Compile Include="Util\CrossThreadRunner.cs" />
+    <Compile Include="Util\DateRange.cs" />
+    <Compile Include="Util\DateRangeOptions.cs" />
+    <Compile Include="Util\DateRangeOptionsConverter.cs" />
     <Compile Include="Util\DateTimeUtilities.cs" />
     <Compile Include="Util\Delegates.cs" />
     <Compile Include="Util\EmailSender.cs" />
