Fixed #711 (Support for .NET 2.0) Removed Unneccessary reference to Linq from TypeLoader and DateRangeOptions Remvoed Unneccessary use of linq from Utilities.
Added Comments to StringUtilities and TypeUtilities.
Fixed #533 (Possible race condition in GetObjectFromObjectManager) by moving code from BOLoader to BOManager

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -341,30 +341,30 @@
     <Compile Include="Source.cs" />
     <Compile Include="SqlFormatter.cs" />
     <Compile Include="UIDefCol.cs" />
-    <Compile Include="Exceptions\Util\ByteString.cs" />
-    <Compile Include="Exceptions\Util\ConfigFileSettings.cs" />
-    <Compile Include="Exceptions\Util\CrossThreadRunner.cs" />
-    <Compile Include="Exceptions\Util\DateRange.cs" />
-    <Compile Include="Exceptions\Util\DateRangeOptions.cs" />
-    <Compile Include="Exceptions\Util\DateRangeOptionsConverter.cs" />
-    <Compile Include="Exceptions\Util\DateTimeUtilities.cs" />
-    <Compile Include="Exceptions\Util\Delegates.cs" />
-    <Compile Include="Exceptions\Util\EmailSender.cs" />
-    <Compile Include="Exceptions\Util\FileUtilities.cs" />
-    <Compile Include="Exceptions\Util\File\CSVFileReader.cs" />
-    <Compile Include="Exceptions\Util\File\CSVFileWriter.cs" />
-    <Compile Include="Exceptions\Util\File\TextFileLoader.cs" />
-    <Compile Include="Exceptions\Util\File\TypeLoader.cs" />
-    <Compile Include="Exceptions\Util\IdNumberUtilities.cs" />
-    <Compile Include="Exceptions\Util\ImageThumbnailCreator.cs" />
-    <Compile Include="Exceptions\Util\LongText.cs" />
-    <Compile Include="Exceptions\Util\ReflectionUtilities.cs" />
-    <Compile Include="Exceptions\Util\SerialisationUtilities.cs" />
-    <Compile Include="Exceptions\Util\SortedStringCollection.cs" />
-    <Compile Include="Exceptions\Util\StringUtilities.cs" />
-    <Compile Include="Exceptions\Util\TypeUtilities.cs" />
-    <Compile Include="Exceptions\Util\Utilities.cs" />
-    <Compile Include="Exceptions\Util\XmlDocumentValidator.cs" />
+    <Compile Include="Util\ByteString.cs" />
+    <Compile Include="Util\ConfigFileSettings.cs" />
+    <Compile Include="Util\CrossThreadRunner.cs" />
+    <Compile Include="Util\DateRange.cs" />
+    <Compile Include="Util\DateRangeOptions.cs" />
+    <Compile Include="Util\DateRangeOptionsConverter.cs" />
+    <Compile Include="Util\DateTimeUtilities.cs" />
+    <Compile Include="Util\Delegates.cs" />
+    <Compile Include="Util\EmailSender.cs" />
+    <Compile Include="Util\FileUtilities.cs" />
+    <Compile Include="Util\File\CSVFileReader.cs" />
+    <Compile Include="Util\File\CSVFileWriter.cs" />
+    <Compile Include="Util\File\TextFileLoader.cs" />
+    <Compile Include="Util\File\TypeLoader.cs" />
+    <Compile Include="Util\IdNumberUtilities.cs" />
+    <Compile Include="Util\ImageThumbnailCreator.cs" />
+    <Compile Include="Util\LongText.cs" />
+    <Compile Include="Util\ReflectionUtilities.cs" />
+    <Compile Include="Util\SerialisationUtilities.cs" />
+    <Compile Include="Util\SortedStringCollection.cs" />
+    <Compile Include="Util\StringUtilities.cs" />
+    <Compile Include="Util\TypeUtilities.cs" />
+    <Compile Include="Util\Utilities.cs" />
+    <Compile Include="Util\XmlDocumentValidator.cs" />
     <Compile Include="XMLWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
