Bug #816 (Add BOPropDataMapper fro Int64) This ensures that Int64 (long) will behave consistently with Int32 when loading from DB, setting property value from Grids or forms etc.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -158,6 +158,7 @@
     <Compile Include="ClassDefinition\TestFilterDef.cs" />
     <Compile Include="ClassDefinition\TestSingleRelationshipDef.cs" />
     <Compile Include="CriteriaManager\TestCriteriaValues.cs" />
+    <Compile Include="DataMappers\TestBOPropDataMapper_long.cs" />
     <Compile Include="Loaders\TestClassDefsXmlValidator.cs" />
     <Compile Include="ClassDefinition\TestClassDefValidator.cs" />
     <Compile Include="Loaders\TestXmlBusinessObjectLookupListLoader.cs" />
