--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -156,6 +156,7 @@
     <Compile Include="ClassDefinition\BOPropGeneralDataMapper.cs" />
     <Compile Include="ClassDefinition\BOPropGuidDataMapper.cs" />
     <Compile Include="ClassDefinition\BOPropIntDataMapper.cs" />
+    <Compile Include="ClassDefinition\BOPropLongDataMapper.cs" />
     <Compile Include="ClassDefinition\BOPropStringDataMapper.cs" />
     <Compile Include="ClassDefinition\ClassDefHelper.cs" />
     <Compile Include="ClassDefinition\ClassDefValidator.cs" />
