Worked on #908 (Support for circular relationships in criteria)  - Converted aliases to use source names instead of source objects as key  - Created an Asset class for the acceptance tests. These are currently ignored.

--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -103,6 +103,7 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="ArchitectureTest.cs" />
+    <Compile Include="Asset.cs" />
     <Compile Include="Base\TestDateRange.cs" />
     <Compile Include="Base\TestDateRangeOptionsConverter.cs" />
     <Compile Include="Base\TestDateTimeNow.cs" />
