Fixed issue #1000 - Extract an IBusinessObjectManager interface and make BusinessObjectManagerNull truly empty Extracted the interface and changed usages to be against the interface where possible.

--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -210,6 +210,7 @@
     <Compile Include="NumberGenerator\NumberGenerator.cs" />
     <Compile Include="ObjectManager\BusinessObjectManager.cs" />
     <Compile Include="ObjectManager\BusinessObjectManagerNull.cs" />
+    <Compile Include="ObjectManager\IBusinessObjectManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
