** Merge from branch 2.5: (revs 12873-13335, 13449-13599): Fixed #1000, #941, #1146, #1109

--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -127,6 +127,8 @@
     <Compile Include="Base\TestRSAPasswordCrypter.cs" />
     <Compile Include="Base\TestXmlWrapper.cs" />
     <Compile Include="BeforeSaveBo.cs" />
+    <Compile Include="BOWithCompositePK.cs" />
+    <Compile Include="BOWithStringPKProp.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="Circle.cs" />
     <Compile Include="CircleNoPrimaryKey.cs" />
