Fixed bug in Output for Bo and Console

--- a/source/Habanero.Console/Habanero.Console.2008.csproj
+++ b/source/Habanero.Console/Habanero.Console.2008.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Habanero.Console</RootNamespace>
-    <AssemblyName>Habanero.Console.2008</AssemblyName>
+    <AssemblyName>Habanero.Console</AssemblyName>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
@@ -44,7 +44,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Habanero.Console.2008.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Habanero.Console.xml</DocumentationFile>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
