--- a/source/Habanero.Bo/Habanero.Bo.2008.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.2008.csproj
@@ -54,7 +54,7 @@
     <ConfigurationOverrideFile>
     </ConfigurationOverrideFile>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>bin\Debug\Habanero.BO.2008.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Habanero.BO.XML</DocumentationFile>
     <DebugSymbols>true</DebugSymbols>
     <FileAlignment>4096</FileAlignment>
     <NoStdLib>false</NoStdLib>
